--- a/kubernetes/poc/debugging.yaml
+++ b/kubernetes/poc/debugging.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: middleware-test
+    name: skaffold-kaniko-test
 spec:
     template:
         spec:
