--- a/kubernetes/poc/kustomization.yaml
+++ b/kubernetes/poc/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
     - ../base
-patchStrategicMerge:
+patchesStrategicMerge:
     - debugging.yaml
 configMapGenerator:
-    - name: config-middleware-test
+    - name: config-skaffold-test
       behavior: merge
       literals:
           - TEST_STRING="next level weird string;agreag>P{}"
